--- a/Submission DR/Revision/Answer to reviewers/Bib_FormalDemo.bib
+++ b/Submission DR/Revision/Answer to reviewers/Bib_FormalDemo.bib
@@ -1,4 +1,28 @@
 % Encoding: UTF-8
+
+
+@article{burger2012human,
+	title={Human mortality improvement in evolutionary context},
+	author={Burger, Oskar and Baudisch, Annette and Vaupel, James W},
+	journal={Proceedings of the National Academy of Sciences},
+	volume={109},
+	number={44},
+	pages={18210--18214},
+	year={2012},
+	publisher={National Acad Sciences}
+}
+
+@article{bronnum2017socially,
+	title={Socially disparate trends in lifespan variation: a trend study on income and mortality based on nationwide Danish register data},
+	author={Br{\o}nnum-Hansen, Henrik},
+	journal={BMJ open},
+	volume={7},
+	number={5},
+	pages={e014489},
+	year={2017},
+	publisher={British Medical Journal Publishing Group}
+}
+
 @article{missov2013gompertz,
   title={Gompertz--Makeham life expectancies: expressions and applications},
   author={Missov, Trifon I and Lenart, Adam},
